fixed bugs in functionality and updated design

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-  <div class="calculator">
+  <div class="well calculator">
     <div class="text-right" id="total">0</div>
     <div id="buttons">
       <button class="clearall">AC</button>
       <button class="clear">CE</button>
       <button class="percent">%</button>
       <button class="operation">/</button>
-      
+   
       <button class="number">7</button>
       <button class="number">8</button>
       <button class="number">9</button>
@@ -37,9 +37,9 @@
       <button class="number">3</button>
       <button class="operation">+</button> 
 
-      <button class="number">0</button>
+      <button class="number" id="bottomLeft">0</button>
       <button class="decimal">.</button>
-      <button class="equals">=</button>
+      <button class="equals" id="bottomRight">=</button>
   </div> <!-- buttons div -->
 </body>
 </html>
